--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container pt-5">
               <h1 class="text-body-emphasis">About Me</h1>
               <p class="col-lg-8 mx-auto lead">
-                As a Software Engineering student at the University of Victoria, I am deeply involved in cybersecurity research with a focus on developing secure underwater communication systems. My expertise encompasses a wide range of programming languages, including Python, Java, and C, and extends to web development technologies such as HTML, CSS, JavaScript, React, and Bootstrap. I am proficient in data analysis, utilizing MATLAB and R to extract insights and drive decisions. My academic and project work has not only honed my technical skills but also fostered a strong interest in human-computer interaction. Through this blend of cybersecurity, software engineering, and human-computer interaction, I aspire to create impactful and user-centric digital solutions.
+                As a Software Engineering student at the University of Victoria, I am confused yet excited about what my future holds. I am familiar with programming languages like Python, Java, and C, as well as web development technologies such as HTML, CSS, JavaScript, React, and Bootstrap. Through my academic experience and projects I have fostered a strong interest in cybersecurity, AI and human-computer interaction. Through this, I aspire to create impactful and user-centric digital solutions.
               </h2>
             </div>
     </section>
