--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </h2>
             </div>
     </section>
-    <section id ="projects">
+    <section id ="social">
             <div class = "container text-center pb-5">
                 <a href="https://www.facebook.com" target="_blank" class="btn btn-info me-4"><img src="./images/facebook.svg" height="30"></a>
                 <a href="https://github.com/mansahaj" target="_blank" class="btn btn-info me-4"><img src="./images/gitub.svg" height="30"></a>
