--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>
+</head>;
 <body>
     <!-- Navbar -->
     <section id="navbar">
@@ -55,11 +55,11 @@
     </section>
     <section id ="social">
             <div class = "container text-center pb-5">
-                <a href="https://www.facebook.com" target="_blank" class="btn btn-info me-4"><img src="./images/facebook.svg" height="30"></a>
+                <!-- <a href="https://www.facebook.com" target="_blank" class="btn btn-info me-4"><img src="./images/facebook.svg" height="30"></a> -->
                 <a href="https://github.com/mansahaj" target="_blank" class="btn btn-info me-4"><img src="./images/gitub.svg" height="30"></a>
                 <a href="https://www.instagram.com/singhmansahaj/" target="_blank" class="btn btn-info me-4"><img src="./images/instagram.svg" height="30"></a>
                 <a href="https://www.linkedin.com/in/mansahaj-singh-popli-b54ab61b9/" target="_blank" class="btn btn-info me-4"><img src="./images/linkedin.svg" height="30"></a>
-                <a href="https://drive.google.com/file/d/1b1hYfV77PtexdIogtiPds-_0J4TA3BT9/view?usp=share_link" target="_blank" class="btn btn-info me-4"><img src="./images/resume.svg" height="30"></a>
+                <a href="https://drive.google.com/file/d/1hZ9BOIoG-MnMAWjzUpGXT4uaTLup03E9/view" target="_blank" class="btn btn-info me-4"><img src="./images/resume.svg" height="30"></a>
             </div>
           </div>
     </section>
