--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     </section>
     <section id ="social">
             <div class = "container text-center pb-5">
-                <!-- <a href="https://www.facebook.com" target="_blank" class="btn btn-info me-4"><img src="./images/facebook.svg" height="30"></a> -->
                 <a href="https://github.com/mansahaj" target="_blank" class="btn btn-info me-4"><img src="./images/gitub.svg" height="30"></a>
                 <a href="https://www.instagram.com/singhmansahaj/" target="_blank" class="btn btn-info me-4"><img src="./images/instagram.svg" height="30"></a>
                 <a href="https://www.linkedin.com/in/mansahaj-singh-popli-b54ab61b9/" target="_blank" class="btn btn-info me-4"><img src="./images/linkedin.svg" height="30"></a>
@@ -68,6 +67,49 @@
         <h1 class="text-body-emphasis text-center pt-5">Projects</h1>
         <div class="container pb-md-4 pt-3">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="card-body">
+                    <a href = "https://github.com/mansahaj/bridgecare" target="_blank" class="text-decoration-none text-reset">
+                    <p class="card-text"><h3>BridgeCare</h3>
+                        Built a website to make communication between caretakers and healthcare officials more efficient. This was made as part of the 'Island Health Hackatahon'.<br>
+                        <img src="./images/html.svg" height="50" class="pt-2" alt="html">
+                        <img src="./images/svelte.svg" height="50" class="pt-2" alt="css">
+                        <img src="./images/css.svg" height="50" class="pt-2" alt="svelte">
+                    </p>
+                  </div>
+                </a>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="card-body">
+                    <a href = "https://github.com/mansahaj/FederatedLearning" target="_blank" class="text-decoration-none text-reset">
+                    <p class="card-text"><h3>Federated Learning</h3>
+                        Built an Intrusion Detection System that uses federated learning - a type of decentralized machine learning<br>
+                        <img src="./images/python.svg" height="50" class="pt-2" alt="Python">
+                        <img src="./images/flower-logo.svg" height="50" class="pt-2" alt="css">
+                        <img src="./images/tensorflow-ar21.svg" height="50" class="pt-2" alt="svelte">
+                    </p>
+                  </div>
+                </a>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="card-body">
+                    <a href = "https://github.com/paramsbhs/370-Group-Project" target="_blank" class="text-decoration-none text-reset">
+                    <p class="card-text"><h3>Sport Match</h3>
+                        A sports social media app that can be used for people to find others player to play with. Also includes a league system.<br>
+                        <img src="./images/mysql-svgrepo-com.svg" height="50" class="pt-2" alt="mysql">
+                        <img src="./images/jb-kotlin-svgrepo-com.svg" height="50" class="pt-2" alt="kotlin">
+                        <img src="./images/python.svg" height="50" class="pt-2" alt="python">
+                        <img src="./images/git-svgrepo-com.svg" height="50" class="pt-2" alt="Github">
+                    </p>
+                  </div>
+                </a>
+                </div>
+              </div>
               <div class="col">
                 <div class="card shadow-sm">
                 <a href = "https://github.com/mansahaj/UVIC-website" target="_blank" class="text-decoration-none text-reset">
@@ -100,8 +142,8 @@
                     <a href ="https://github.com/mansahaj/fish_invert_data" target="_blank" class="text-decoration-none text-reset">
                     <p class="card-text"><h3>Fishes Analysis Model</h3>
                         Built a data analysis model using data from "Ocean Networks Canada" understand and predict fish population in an area.<br>
-                        <img src="./images/python.svg" height="50" class="pt-2" alt="python">
-                    </p>
+                        <img src="./images/python.svg" height="50" class="pt-2" alt="Python">
+                      </p>
                     </div>
                     </a>
                   </div>
