--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <img src="./images/html.svg" height="50" class="pt-2" alt="html">
                         <img src="./images/svelte.svg" height="50" class="pt-2" alt="css">
                         <img src="./images/css.svg" height="50" class="pt-2" alt="svelte">
+                        <img src="./images/js.svg" height="50" class="pt-2" alt="Js">
                     </p>
                   </div>
                 </a>
@@ -114,41 +115,17 @@
                 <div class="card shadow-sm">
                 <a href = "https://github.com/mansahaj/UVIC-website" target="_blank" class="text-decoration-none text-reset">
                   <div class="card-body">
-                    <p class="card-text"><h3>UVEC</h3>
-                        Collaborated in a team of three for the 'UVEC' hackathon to build a more accessible website for new university students.<br>
-                        <img src="./images/html.svg" height="50" class="pt-2" alt="HTML">
-                        <img src="./images/js.svg" height="50" class="pt-2" alt="JavaScript">
-                        <img src="./images/css.svg" height="50" class="pt-2" alt="css">
+                    <p class="card-text"><h3>MathMagician</h3>
+                      Collaborated in a team of four for the 'UVEC' hackathon and won 1st place. Developed a town-saving game where players protect the town from incoming comets by solving math equations.<br>
+                        <img src="./images/next.svg" height="50" class="pt-2" alt="Next">
+                        <img src="./images/react.svg" height="50" class="pt-2" alt="React">
+                        <img src="./images/tailwind.svg" height="50" class="pt-2" alt="React">
+                        <img src="./images/gitub.svg" height="50" class="pt-2" alt="Github">
                     </p>
                   </div>
                 </a>
                 </div>
-              </div>
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="card-body">
-                    <a href = "https://github.com/mansahaj/web_scraper" target="_blank" class="text-decoration-none text-reset">
-                    <p class="card-text"><h3>Web Scraper</h3>
-                        Built a web scraper for "Indeed" website during co-op search to optimize the process of co-op searching.<br>
-                        <img src="./images/python.svg" height="50" class="pt-2" alt="python">
-                    </p>
-                  </div>
-                </a>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="card-body">
-                    <a href ="https://github.com/mansahaj/fish_invert_data" target="_blank" class="text-decoration-none text-reset">
-                    <p class="card-text"><h3>Fishes Analysis Model</h3>
-                        Built a data analysis model using data from "Ocean Networks Canada" understand and predict fish population in an area.<br>
-                        <img src="./images/python.svg" height="50" class="pt-2" alt="Python">
-                      </p>
-                    </div>
-                    </a>
-                  </div>
-                </div>
-              </div>       
+              </div>   
     </section>
 
     <!-- Work Experience -->
@@ -167,21 +144,42 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header">
-                                Research Assisstant - <small>University of Victoria</small>
+                                Software Developer co-op - <small>Inspire</small>
                             </div>
                             <div class="card-body">
-                                <h6 class="text-muted">September 2022 - present</h6>
-                                <p>I work part time at UVIC as an undergraduate Research Assisstant in the SOLIDS lab, where my research focus is on cybersecurity and AI.</p>
+                                <h6 class="text-muted">September 2024 - present</h6>
                                 <ul>
-                                    <li>Threat modelling and intrusion detection using Machine Learning models.</li>
-                                    <li>Writing a research paper on Federated Learning in underwater drones.</li>
+                                  <li>Collaborated with a cross-functional team to develop a Brightspace-integrated platform for 22,000+ students, focusing on neurodiverse learners.</li>
+                                  <li>Built AI-driven study tools and task management features using React.js, Node.js, and REST APIs, improving task efficiency by 20%.</li>
+                                  <li>Implemented Firebase for secure authentication and data management, and integrated Brightspace APIs to enhance platform functionality.</li>
+                                  <li>Worked in agile environment, collaborating with global teams, including those in Nepal.</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+            <div class="row">
+              <!-- Timeline marker -->
+              <div class="text-right">
+                  <div class="timeline-marker"></div>
+              </div>
+              <!-- Job position details -->
+              <div class="col-12">
+                  <div class="card">
+                      <div class="card-header">
+                          Research Assistant - <small>UVic</small>
+                      </div>
+                      <div class="card-body">
+                          <h6 class="text-muted">September 2022 - present</h6>
+                          <ul>
+                              <li>Threat modelling and intrusion detection using Machine Learning models.</li>
+                              <li>Writing a research paper on Federated Learning in underwater drones.</li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <!-- Repeat for more positions -->
         </div>
     </div>
