--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- projects -->
     <section id="projects">
         <h1 class="text-body-emphasis text-center pt-5">Projects</h1>
-        <div class="container pb-md-4 pt-">
+        <div class="container pb-md-4 pt-1">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5">
               <div class="col">
                 <div class="card shadow-sm">
