--- a/index.html
+++ b/index.html
@@ -139,61 +139,48 @@
     </section>
 
     <!-- Work Experience -->
-    <section id = "workexp">
-    <div class="container mt-5">
-        <h1 class="mb-4 text-center">Work Experience</h1>
-        <div class="timeline py-3">
-            <!-- Timeline item -->
-            <div class="timeline-item">
-                <div class="row">
-                    <!-- Timeline marker -->
-                    <div class="text-right">
-                        <div class="timeline-marker"></div>
-                    </div>
-                    <!-- Job position details -->
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-header">
-                                Software Developer co-op - <small>Inspire</small>
-                            </div>
-                            <div class="card-body">
-                                <h6 class="text-muted">September 2024 - present</h6>
-                                <ul>
-                                  <li>Collaborated with a cross-functional team to develop a Brightspace-integrated platform for 22,000+ students, focusing on neurodiverse learners.</li>
-                                  <li>Built AI-driven study tools and task management features using React.js, Node.js, and REST APIs, improving task efficiency by 20%.</li>
-                                  <li>Implemented Firebase for secure authentication and data management, and integrated Brightspace APIs to enhance platform functionality.</li>
-                                  <li>Worked in agile environment, collaborating with global teams, including those in Nepal.</li>
-                                </ul>
-                            </div>
+    <section id="workexp">
+        <div class="container mt-5">
+            <h1 class="mb-4 text-center">Work Experience</h1>
+            <div class="timeline">
+                <!-- Timeline item -->
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="card">
+                        <div class="card-header">
+                            Software Developer co-op - <small>Inspire</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-muted">September 2024 - present</h6>
+                            <ul>
+                                <li>Collaborated with a cross-functional team to develop a Brightspace-integrated platform for 22,000+ students, focusing on neurodiverse learners.</li>
+                                <li>Built AI-driven study tools and task management features using React.js, Node.js, and REST APIs, improving task efficiency by 20%.</li>
+                                <li>Implemented Firebase for secure authentication and data management, and integrated Brightspace APIs to enhance platform functionality.</li>
+                                <li>Worked in agile environment, collaborating with global teams, including those in Nepal.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="card">
+                        <div class="card-header">
+                            Research Assistant - <small>UVic</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-muted">September 2022 - present</h6>
+                            <ul>
+                                <li>Threat modelling and intrusion detection using Machine Learning models.</li>
+                                <li>Writing a research paper on Federated Learning in underwater drones.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- Repeat for more positions -->
             </div>
-            <div class="row">
-              <!-- Timeline marker -->
-              <div class="text-right">
-                  <div class="timeline-marker"></div>
-              </div>
-              <!-- Job position details -->
-              <div class="col-12">
-                  <div class="card">
-                      <div class="card-header">
-                          Research Assistant - <small>UVic</small>
-                      </div>
-                      <div class="card-body">
-                          <h6 class="text-muted">September 2022 - present</h6>
-                          <ul>
-                              <li>Threat modelling and intrusion detection using Machine Learning models.</li>
-                              <li>Writing a research paper on Federated Learning in underwater drones.</li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-            <!-- Repeat for more positions -->
         </div>
-    </div>
-</section>
+    </section>
+
 <!-- Contact Section -->
 <section id="contact" class="py-5">
     <div class="container-fluid px-5">  <!-- Changed from container to container-fluid with padding -->
