added navbar animation

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container pt-4">
                 <h1 class="text-body-emphasis white-text mb-4">About Me</h1>
                 <p class="col-lg-8 mx-auto lead">
-                    As a <b>Software Engineering</b> student, I am driven by my passion for creating innovative solutions through code. My journey in tech has led me to explore fascinating domains like <b>cybersecurity</b>, <b>AI</b>, and <b>human-computer interaction</b>. I thrive on turning complex problems into elegant solutions and am constantly excited by the endless possibilities that technology offers to make a positive impact.
+                  I’m a Software Engineering student who loves solving problems, making fun projects and participating in hackathons. I’m passionate about AI (specifically federated learning), cybersecurity, and human-computer interaction. When I’m not coding, you’ll find me diving into anime or smashing birdies on the badminton court.
                 </p>
             </div>
         </div>
