--- a/index.html
+++ b/index.html
@@ -207,5 +207,21 @@
         </div>
     </div>
 </section>
+
+<!-- Footer -->
+<footer class="footer gradient-background">
+    <div class="container">
+        <div class="row py-3">
+            <div class="col-12 text-center mb-3">
+                <a href="https://github.com/mansahaj" target="_blank" class="btn btn-info"><img src="./images/gitub.svg" height="25"></a>
+                <a href="https://www.instagram.com/singhmansahaj/" target="_blank" class="btn btn-info"><img src="./images/instagram.svg" height="25"></a>
+                <a href="https://www.linkedin.com/in/mansahaj-singh-popli-b54ab61b9/" target="_blank" class="btn btn-info"><img src="./images/linkedin.svg" height="25"></a>
+            </div>
+            <div class="col-12 text-center">
+                <p class="mb-0">© 2024 Mansahaj Singh Popli. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
